1.Minor fixes for multiple project for a location which is not even filled on that location. 2.Getting shadow emp api fails because of .toList()